--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -109,8 +109,9 @@
                 }
                 .lastUpdated{
                     position: absolute;
-                    bottom: -22px;
+                    bottom: -18px;
                     font-size: $smSize2;
+                    color: $subtle;
                 }
                 .name {
                     font-weight: bold;
